# emwaver

./: .code_workspace  .cproject  .dockerignore  .env  .env.ci  .env.example  .env.frontend  .env.ios  .env.macos  .gitattributes  .gitignore  .mxproject  .nvimlog  .project  .tmp_catalog.html.js  .tmp_device.html.js  .tmp_hardware.html.js  .tmux-init  1-PCB_PCB_EMWAVER_V2 copy copy copy copy copy.json  1-PCB_PCB_EMWAVER_V2 copy copy copy copy.json  1-PCB_PCB_GPIO_WAVER.json  1-PCB_PCB_INFRARED_WAVER_V2.json  1-PCB_PCB_emwaver_diy.json  1-Schematic_EMWAVER_AIR.json  1-Schematic_EMWAVER_CARRIER.json  1-Schematic_EMWAVER_CORE.json  1-Schematic_EMWAVER_LINK.json  1-Schematic_EMWAVER_SHIELD.json  1-Schematic_GPIO_WAVER.json  1-Schematic_INFRARED_WAVER.json  1-Schematic_ISM_WAVER.json  1-Schematic_RFID_WAVER.json  2-PCB_19_ROWS_27_COLUMNS.json  2-PCB_PROTO12x22.json  3-PCB_PROTO18x22.json  AGENTS.md  AGENT_API.md  AGENT_SYSTEM_PROMPT.md  BOM_EMWAVER_CORE_2026-03-26.csv  BOM_INFRARED_WAVER_2026-03-26.csv  (+61 more)
.github/: FUNDING.yml
app/cli/: Cargo.toml  README.md  RELEASE.md
app/cli/resources/vibe/: AGENTS_template.md
app/cli/src/: cli.rs  firmware.rs  init.rs  interactive.rs  lib.rs  repl.rs  shell.rs
app/cli/tests/: cli.rs
app/crates/emwaver-device-core/: Cargo.toml
app/crates/emwaver-device-core/src/: bridge.rs  lib.rs  midi_sysex.rs
app/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/dfu/: ir.dfu  rfid.dfu
app/src-tauri/src/: ble.rs  buffer.rs  daemon_client.rs  desktop_ipc.rs  dfu.rs  firmware.rs  git.rs  lib.rs  llm.rs  main.rs  panel_main.rs  pty.rs  script_runtime.rs  transport_buffer.rs  usb.rs  wavelet_runtime.rs
cli/: Cargo.toml  EMWAVER_DAEMON_CLI_SKILL.md  README.md  RELEASE.md  install.sh  install.txt
cli/crates/emwaver-buffer-android-jni/: Cargo.toml
cli/crates/emwaver-buffer-android-jni/src/: lib.rs
cli/crates/emwaver-buffer-core/: Cargo.toml
cli/crates/emwaver-buffer-core/src/: buffer.rs  lib.rs  packet.rs  sampler.rs  status.rs  tx.rs
cli/crates/emwaver-buffer-ios-ffi/: Cargo.toml
cli/crates/emwaver-buffer-ios-ffi/include/: emwaver_buffer_ios.h
cli/crates/emwaver-buffer-ios-ffi/src/: lib.rs
cli/installers/: install-macos.sh
cli/resources/vibe/: AGENTS_BASE.md  AGENTS_VIBE_SNIPPET.md  AGENTS_template.md  emwaver_README.md  emwaver_SPI.md  emwaver_WAVELETS.md
cli/src/: app_ble.rs  backend.rs  ble_cli.rs  ble_ota.rs  bridge.rs  cli.rs  daemon.rs  desktop_ipc.rs  dfu.rs  firmware.rs  git.rs  init.rs  interactive.rs  lib.rs  main.rs  shell.rs  state.rs  sync.rs  vibe.rs
cli/src/commands/: mod.rs
cli/templates/esp32s3/: CMakeLists.txt
cli/templates/esp32s3/main/: main.c
cli/tests/: cli.rs
cli/wavelets/: cc1101_radio_console.js  hello-world.js  hello_world_usb.js  rfm69_radio_console.js  test-remote.js  wavelet_demo.js  wavelet_gpio.js  wavelet_rfid.js
daemon/emwaver/: Cargo.toml
daemon/emwaver-host/: Cargo.toml
daemon/emwaver-host/src/: device.rs  engine.rs  heartbeat.rs  main.rs  ui_tree.rs
daemon/emwaver/src/: main.rs
desktop/: Cargo.toml  README.md  build.rs
desktop/crates/emwaver-buffer-core/src/: sampler.rs
desktop/crates/emwaver-device-core/: Cargo.toml
desktop/crates/emwaver-device-core/src/: bridge.rs  midi_sysex.rs
desktop/crates/emwaver-dfu/: Cargo.toml
desktop/crates/emwaver-dfu/src/: lib.rs
desktop/resources/default-scripts/: blink.emw  i2c.emw  ism.emw  pwm.emw  sampler.emw  uart.emw
desktop/src/: bundled_scripts.rs  main.rs  script_engine.rs  script_preview.rs
desktop/ui/: main.slint
esp/main/: .spi.c.swp  CMakeLists.txt  Kconfig.projbuild  ble_server.c  ble_server.h  cc1101.c  command_registry.c  idf_component.yml  init.c  main.c  main.h  ota_ble.c  ota_ble.h  ota_ble_gatt.c  ota_core.h  ota_status.c  ota_status.h  ota_wifi.c  rfm69.c  rfm69.h  sampler.c  sampler.h
esp/main/libraries/: .mfrc522.c.swp  ble_server.c  ble_server.h  ble_server_stub.c  cc1101.c  cc1101.h  command_registry.c  command_registry.h  emw_proto.h  emw_target.h  firmware_version.h  gpio_commands.c  gpio_commands.h  init.c  mfrc522.c  mfrc522.h  ota_ble.c  ota_ble.h  ota_ble_gatt.c  ota_ble_gatt.h  ota_core.c  ota_core.h  ota_status.c  ota_status.h  ota_wifi.c  ota_wifi.h  rfm69.c  rfm69.h  sampler.c  sampler.h  spi.c  spi.h  transport_debug.c  transport_debug.h  transport_session.c  transport_session.h  usb.c  usb.h  usb_hid_legacy.c  usb_stub.c  (+2 more)
gateway/backend/emwaver/: Cargo.toml
gateway/backend/emwaver/src/: main.rs
linux/: Cargo.toml  README.md  TODO.md  TRANSPORT_PARITY_AUDIT.md
linux/crates/emwaver-linux-agent/: Cargo.toml
linux/crates/emwaver-linux-agent/src/: client.rs  hardware.rs  lib.rs  settings.rs
linux/crates/emwaver-linux-app/: Cargo.toml
linux/crates/emwaver-linux-app/src/: main.rs
linux/crates/emwaver-linux-core/: Cargo.toml
linux/crates/emwaver-linux-core/src/: app_model.rs  device_registry.rs  lib.rs  script_library.rs  script_session.rs
linux/crates/emwaver-linux-firmware/: Cargo.toml
linux/crates/emwaver-linux-firmware/src/: esp32_flash.rs  lib.rs  stm32_dfu.rs
linux/crates/emwaver-linux-runtime/: Cargo.toml
linux/crates/emwaver-linux-runtime/src/: javascript.rs  lib.rs
linux/crates/emwaver-linux-transport/: Cargo.toml
linux/crates/emwaver-linux-transport/src/: ble.rs  command.rs  lib.rs  runtime.rs  simulator.rs  usb.rs  usb_midi_sysex.rs  wifi.rs
linux/emwaver-host/: Cargo.toml
linux/emwaver-host/src/: config.rs  device.rs  engine.rs  heartbeat.rs  main.rs  protocol.rs
linux/install/: install.sh
linux/resources/: com.continualmi.EMWaver.desktop  com.continualmi.EMWaver.metainfo.xml
linux/resources/udev/: 99-emwaver.rules
linux/scripts/: package-linux.sh  verify-linux-install.sh  verify-linux-package.sh
linux/systemd/: emwaver-host.service
securewaver/src-tauri/: Cargo.toml  tauri.conf.json
securewaver/src-tauri/icons/: icon.icns
securewaver/src-tauri/src/: auth_google.rs  legit_check.rs  lib.rs  main.rs  session_store.rs  update_mode.rs  update_mode_identity.rs  usb_midi_sysex.rs
(+2279 files in other folders)
