cargo-features = ["edition2024"]

[package]
name = "emw"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "emwaver"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
include_dir = { version = "0.7", features = ["glob"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "io-util", "io-std", "net", "sync"] }
walkdir = "2"
sha2 = "0.10"
emwaver-desktop-ipc = { path = "../app/crates/emwaver-desktop-ipc" }
emwaver-dfu = { path = "../app/crates/emwaver-dfu", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
portable-pty = "0.9"

[target.'cfg(not(target_os = "macos"))'.dependencies]

[dev-dependencies]
assert_cmd = "2"

[features]
# Default CLI is Desktop-backed (no direct USB access / no libusb dependency).
default = []
# Enables firmware build/flash/dfu subcommands (pulls in libusb via `rusb`).
firmware-tools = ["dep:emwaver-dfu"]
