[package]
name = "emwaver-desktop"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[build-dependencies]
slint-build = "1"

[dependencies]
slint = "1"
rfd = "0.14"
anyhow = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

emwaver-device-core = { path = "../app/crates/emwaver-device-core" }
emwaver-dfu = { path = "../app/crates/emwaver-dfu" }
