[workspace]
resolver = "2"
members = [
  "crates/emwaver-linux-agent",
  "crates/emwaver-linux-app",
  "crates/emwaver-linux-core",
  "crates/emwaver-linux-firmware",
  "crates/emwaver-linux-transport",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/continual-mi/emwaver"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

