[workspace]
resolver = "2"
members = [
  "crates/emwaver-linux-app",
  "crates/emwaver-linux-core",
  "crates/emwaver-linux-firmware",
  "crates/emwaver-linux-runtime",
  "crates/emwaver-linux-transport",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/continualmi/emwaver"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
boa_engine = "0.21.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
uuid = { version = "1.8", features = ["v4", "serde"] }
