cargo-features = ["edition2024"]

[package]
name = "emw"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "emwaver"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
boa_engine = "0.20"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "io-util", "io-std", "net", "sync"] }
emwaver-desktop-ipc = { path = "../crates/emwaver-desktop-ipc" }
emwaver-dfu = { path = "../crates/emwaver-dfu" }

[target.'cfg(target_os = "macos")'.dependencies]
portable-pty = "0.9"

[target.'cfg(not(target_os = "macos"))'.dependencies]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[features]
# Default CLI is Desktop-backed (no direct USB access / no libusb dependency).
default = []
