[package]
name = "emw"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "emwaver"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
emwaver-dfu = { path = "../../crates/emwaver-dfu" }

[features]
# Keep the CLI intentionally tiny: firmware build + DFU flash only.
default = []
