[package]
name = "emwaver"
version = "0.1.0"
description = "A Tauri App"
authors = ["Luís Marnoto"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "EMWaver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emwaver_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
rusb = "0.9"
sha2 = "0.10"
boa_engine = "0.20"
boa_gc = "0.20"
emwaver-buffer-core = { path = "../crates/emwaver-buffer-core" }
emwaver-device-core = { path = "../crates/emwaver-device-core" }
emwaver-dfu = { path = "../crates/emwaver-dfu" }
emwaver-desktop-ipc = { path = "../crates/emwaver-desktop-ipc" }

[patch.crates-io]
regress = { path = "../crates/regress" }
coremidi = { path = "../crates/coremidi" }
