[package]
name = "emwaver"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
emwaver-device = { path = "../emwaver-device" }
emwaver-runtime = { path = "../emwaver-runtime" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
crossterm = "0.27"
ratatui = "0.26"

# For localhost gateway control commands
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"
tungstenite = "0.24"
url = "2"

# For pidfile paths
directories = "5"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }
