[package]
name = "securewaver"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri plugins
tauri-plugin-dialog = "2"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
base64 = "0.22"
zeroize = "1"

# Internal DFU helper crate
emwaver-dfu = { path = "../../crates/emwaver-dfu" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
