[package]
name = "securewaver"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri plugins
tauri-plugin-dialog = "2"

# Encoding
base64 = "0.22"

# Auth (Google OAuth PKCE + Firebase exchange)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
rand = "0.8"
url = "2"
tiny_http = "0.12"
open = "5"
urlencoding = "2"
dotenvy = "0.15"
midir = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Internal DFU helper crate
emwaver-dfu = { path = "../../crates/emwaver-dfu" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
