[package]
name = "emwaver-device-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
emwaver-buffer-core = { path = "../emwaver-buffer-core" }
midir = "0.10"
rusb = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-util", "io-std", "net", "sync"] }
