[package]
name = "emwaver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
emwaver-device = { path = "../emwaver-device" }
emwaver-runtime = { path = "../emwaver-runtime" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
crossterm = "0.27"
ratatui = "0.26"

serde_json = "1"
serde = { version = "1", features = ["derive"] }
tungstenite = "0.24"
url = "2"

# For pidfile paths
directories = "5"

# Process management
nix = { version = "0.29", features = ["signal", "process"] }
