[package]
name = "emwaver-linux-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adw = { package = "libadwaita", version = "0.7" }
emwaver-linux-agent = { path = "../emwaver-linux-agent" }
emwaver-linux-core = { path = "../emwaver-linux-core" }
emwaver-linux-firmware = { path = "../emwaver-linux-firmware" }
emwaver-linux-transport = { path = "../emwaver-linux-transport" }
gtk = { package = "gtk4", version = "0.9" }
tokio.workspace = true
