[package]
name = "emwaver-linux-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
emwaver-linux-core = { path = "../emwaver-linux-core" }
rusb = { version = "0.9", features = ["vendored"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
