[package]
name = "emwaver-linux-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
btleplug = "0.12"
emwaver-linux-core = { path = "../emwaver-linux-core" }
futures.workspace = true
mdns-sd = "0.19"
rusb = { version = "0.9", features = ["vendored"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
